# MicroKernel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bochsrc.txt  floppy.img
bochs/: floppy.img  update_image.sh
src/: Makefile  boot.s  link.ld
src/boot/: boot.s  gdt.c  gdt.h  gdt.s  idt.c  idt.h  idt.s  isr.c  isr.h  isr.s  k_start.c  kpaging.c  kstart.c
src/common/: div64.c  kernel.h  printk.c  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  types.h  varargs.h
src/console/: console.c  console.h  video_frame_buffer.c  video_frame_buffer.h
src/io/: lowlevel_io.c  lowlevel_io.h  screen_io.c  screen_io.h  vfb.c  vfb.h
src/mm/: mm.c  mm.h  paging.h  paging.s
src/process/: scheduler.c  scheduler.h  services.c  services.h
